k8s/ingress/ar-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${DEPLOY_ENV}-ar-web-ingress
  namespace: ar-web-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ${DEPLOY_ENV}.aleksaristic.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${DEPLOY_ENV}-ar-web-fe-service
            port:
              number: 80
